k8s/heritageflix-zuiderzeemuseum-locations/service.yml
apiVersion: v1
kind: Service
metadata:
  name: heritageflix-zuiderzeemuseum-locations
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: heritageflix-zuiderzeemuseum-locations
